tests/ui/errors/snapshots/infer_unknown_in_const_annotation.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `Unknown` in `const` annotation
   ╭─[test.lis:2:10]
 1 │ 
 2 │ const X: Unknown = 42;
   ·          ───┬───
   ·             ╰── invalid annotation
   ╰────
  help: `Unknown` cannot be used to annotate a constant · code: [infer.unknown_in_const_annotation]
