tests/ui/errors/snapshots/infer_unknown_map_invariant.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:21]
 2 │ fn test() {
 3 │   takes_unknown_map(Map.from([("k", "v")]))
   ·                     ───────────┬──────────
   ·                                ╰── expected `Map<string, Unknown>`, found `mut Map<string, string>`
 4 │ }
   ╰────
  help: Build the map at `Map<string, Unknown>`, e.g. `Map.from<string, Unknown>([(k, v)])` · code: [infer.type_mismatch]
