tests/ui/errors/snapshots/infer_unknown_outside_typedef.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `Unknown` type
   ╭─[test.lis:3:10]
 2 │ fn test() {
 3 │   let x: Unknown = 42;
   ·          ───┬───
   ·             ╰── not allowed in `.lis` files
 4 │ }
   ╰────
  help: Remove the `Unknown` annotation. `Unknown` can only be used in `.d.lis` files. This type exists only to represent Go's `any` in typedefs · code: [infer.unknown_outside_typedef]
