tests/ui/errors/snapshots/infer_unknown_slice_invariant.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:4:23]
 3 │   let xs: Slice<int> = [1, 2, 3]
 4 │   takes_unknown_slice(xs)
   ·                       ─┬
   ·                        ╰── expected `Slice<Unknown>`, found `Slice<int>`
 5 │ }
   ╰────
  help: Annotate the slice literal: `let xs: Slice<Unknown> = [v1, v2, ...]` · code: [infer.type_mismatch]
