tests/ui/errors/snapshots/infer_unresolved_receiver_in_lambda_to_unknown_varargs.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot infer receiver type
   ╭─[test.lis:5:19]
 4 │ fn main() {
 5 │   fmt.Println(|c| c.foo)
   ·                   ──┬──
   ·                     ╰── cannot resolve `.foo` because the receiver type is unknown
 6 │ }
   ╰────
  help: Annotate the receiver's binding, e.g. `let x: SomeType = ...` or `|param: SomeType| ...` · code: [infer.unresolved_receiver_type]
