tests/ui/errors/snapshots/infer_value_receiver_not_mutable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Immutable receiver
   ╭─[test.lis:6:5]
 5 │   fn increment(self: Counter) {
 6 │     self.count = self.count + 1;
   ·     ─────────────┬─────────────
   ·                  ╰── receiver is immutable
 7 │   }
   ╰────
  help: Use `self: mut Ref<Counter>` to make the receiver mutable · code: [infer.value_receiver_immutable]
